telemetry/healthcheck/netpol/default-egress-ingress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: telemetry-healthcheck-network-policy
  labels:
    netpol: "true"
spec:
  podSelector:
    matchLabels:
      app: telemetry-healthcheck
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 5001
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 9093
  - to:
    ports:
    - protocol: TCP
      port: 3000
  - to:
    ports:
    - protocol: TCP
      port: 9090
  - to:
    ports:
    - protocol: TCP
      port: 9091
  - to:
    ports:
    - protocol: TCP
      port: 8000
  - to:
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - to:
    ports:
    - protocol: TCP
      port: 2379
